--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
-	"name": "idea.web.back",
-	"version": "1.0.50",
-	"scripts": {
-		"dev": "bun run --watch src/index.ts",
-		"typecheck": "bun tsc --noEmit",
-		"db:generate": "drizzle-kit generate",
-		"db:migrate": "bun run src/db/migrate.ts",
-		"db:seed": "bun run src/db/seed.ts",
-		"db:studio": "drizzle-kit studio",
-		"format": "biome format --write",
-		"lint": "biome format --write",
-		"check": "biome check --write",
-		"prepare": "husky"
-	},
-	"dependencies": {
-		"@elysiajs/cors": "^1.4.1",
-		"@elysiajs/swagger": "^1.3.1",
-		"drizzle-orm": "^0.45.1",
-		"elysia": "latest",
-		"lint-staged": "^16.2.7"
-	},
-	"devDependencies": {
-		"bun-types": "latest",
-		"drizzle-kit": "^0.31.9",
-		"husky": "^9.1.7"
-	},
-	"module": "src/index.js"
+  "name": "idea.web.back",
+  "version": "1.0.50",
+  "scripts": {
+    "dev": "bun run --watch src/index.ts",
+    "build": "bun build --compile --minify-whitespace --minify-syntax --target bun --outfile server src/index.ts",
+    "start": "./server",
+    "typecheck": "bun tsc --noEmit",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "bun run src/db/migrate.ts",
+    "db:seed": "bun run src/db/seed.ts",
+    "db:studio": "drizzle-kit studio"
+  },
+  "dependencies": {
+    "@elysiajs/cors": "^1.4.1",
+    "@elysiajs/swagger": "^1.3.1",
+    "drizzle-orm": "^0.45.1",
+    "elysia": "latest"
+  },
+  "devDependencies": {
+    "bun-types": "latest",
+    "drizzle-kit": "^0.31.9"
+  },
+  "module": "src/index.js"
 }
